point d'entrée de l'application

--- a/src/app/pages/enter/enter.component.html
+++ b/src/app/pages/enter/enter.component.html
@@ -1,1 +1,12 @@
-<h1> Voici le point d'entrée de l'application </h1>
+<div class="container bloc-enter">
+    <div class="col-8 col-lg-4 mx-auto">
+        <img class="logo-amy" src="assets/images/logoAmyJ.jpg" /> 
+    </div> 
+    <div class="col-10 col-lg-8 mx-auto text-center bloc-slogan pt-2 pb-2">
+        <span class="slogan"> bijoux en perles tissées </span> <br/>
+    </div>
+    <div class="col-5 mx-auto text-center">
+        <a routerLink="/page/home" class="enter font-italic"> Entrez ici </a>  
+    </div>
+</div>
+
