--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@media screen and (min-width: 200px) and (max-width: 576px) {
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .container {
+    margin-left: 100px;
+    margin-right: 100px;
+    max-height: 1000px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    margin-left: 100px;
+    margin-right: 100px;
+    max-height: 1000px;
+  }
+}
+
