--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,5 +1,106 @@
-<h3> -------------------- Menu --------------------</h3>
+
+
+<!-- MENU POUR MOBILE ET TABLETTE -->
+<nav class="d-sm-block d-md-block d-lg-none navbar navbar-expand-lg navbar-light">
+    <div class="row">
+        <button class="navbar-toggler m-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <img class="logo-amy-mobile mx-auto" src="assets/images/logoAmyJ-mobile.jpg"/>
+    </div>
+    
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active"> <!-- LE CONCEPT -->
+          <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="/page/concept"><i class="fa fa-question pr-2" aria-hidden="true" ></i> Le concept <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item"> <!-- LE LAB -->
+          <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="/page/lab"> <i class="fa fa-flask pr-2" aria-hidden="true"></i>Le lab</a>
+        </li>
+        <li class="nav-item"> <!-- INSTAGRAM -->
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="/page/instagram"><i class="fa fa-instagram pr-2" aria-hidden="true"></i> Instagram</a>
+        </li>
+        <li class="nav-item"> <!-- MON COMPTE -->
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> Mon compte</a>
+        </li>
+        <li class="nav-item"> <!-- WISHLIST -->
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"><i class="fa fa-heart-o pr-2" aria-hidden="true"></i>Ma wishlist</a>
+        </li>
+        <li class="nav-item"> <!-- PANIER -->
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"><i class="fa fa-shopping-cart pr-2" aria-hidden="true"></i>Mon panier</a>
+        </li>
+        <li class="nav-item"> <!-- CONTACT -->
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"> <i class="fa fa-pencil-square-o pr-2" aria-hidden="true"> </i>contactez-nous</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
+        <!--button class="btn my-2 my-sm-0" type="submit">Search</button-->
+      </form>
+    </div>
+  </nav>
+
+  <!-- HEADER POUR PC ET GRAND ECRAN -->
+  <div class="container">
+  <div class="row">
+        <ul class="col-6 hidden-md-down nav justify-content-start">
+            <li class="nav-item">
+                <a class="nav-link active nav-infos-user text-uppercase" href="#"><i class="fa fa-flag-o pr-1" aria-hidden="true"></i> langue</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-infos-user text-uppercase" href="#"><i class="fa fa-pencil-square-o pr-1" aria-hidden="true"></i> contactez-nous</a>
+            </li>
+        </ul>    
+        
+        <ul class="col-6 hidden-md-down nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active nav-infos-user text-uppercase" href="#"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> mon compte</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-infos-user text-uppercase" href="#"> <i class="fa fa-heart-o pr-2" aria-hidden="true"></i>ma wishlist</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-infos-user text-uppercase" href="#"><i class="fa fa-shopping-cart pr-2" aria-hidden="true"></i>mon panier</a>
+            </li>
+        </ul>
+        
+  </div>
+
+  <!-- MENU POUR PC ET GRAND ECRAN -->
+  <div class="row menu-pc m-5 hidden-md-down">
+        <ul class="col-4 nav navbar-menu justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active nav-pc text-uppercase mr-4 ml-4" routerLink="/page/concept" >le concept</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-pc text-uppercase mr-4 ml-4" routerLink="/page/lab" >le lab</a>
+            </li>
+            
+        </ul>
+        
+        <div class="col-4 text-center">
+            <img class="logo-amy-pc" src="assets/images/logo-amy-pc.jpg" routerLink="/page/home"/>
+        </div>
+        
+        <ul class="col-4 hidden-md-down nav navbar-menu justify-content-start">
+            <li class="nav-item">
+                <a class="nav-link active nav-pc text-uppercase mr-4 ml-4" routerLink="/page/instagram"> instagram </a>
+            </li>
+            <div class="input-group pb-1">
+                <input type="text" class="form-control input-search">
+                <span class="input-group-btn">
+                    <button class="btn btn-search" type="button"><i class="fa fa-search" aria-hidden="true"></i> </button>   
+                </span>
+            </div>
+
+        </ul>
+        
+  </div>
+    
 
 <router-outlet></router-outlet>
 
 <h3> -------------------- FOOTER -------------------- </h3>
+
+</div>
