Ajout des formulaires typeBijou et taille dans le lab

--- a/src/app/pages/instagram/instagram.component.html
+++ b/src/app/pages/instagram/instagram.component.html
@@ -1,1 +1,6 @@
-<h3> Ici les articles de mon blog instagram </h3> 
+<div class="text-center">
+    <!-- LightWidget WIDGET -->
+    <iframe [src]="trustUrl" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+
+</div>
+
