--- a/src/app/pages/personnalisation/lab-enter/lab-enter.component.html
+++ b/src/app/pages/personnalisation/lab-enter/lab-enter.component.html
@@ -1,1 +1,4 @@
-<h3> Voici le point d'entrée du lab </h3>
+<div class="text-center">
+    <p> Voilà comment ça marche... blablbablab </p>
+    <button class="btn btn-creation p-3" routerLink="/page/lab/type"> place à la création ! </button>    
+</div>
