--- a/src/app/pages/personnalisation/lab-pattern/lab-pattern.component.html
+++ b/src/app/pages/personnalisation/lab-pattern/lab-pattern.component.html
@@ -1,3 +1,24 @@
 <app-lab-step-menu></app-lab-step-menu>
 
-<h3> Ici vous allez choisir le pattern que vous souhaitez </h3> 
+<div class="bloc-pattern col-12 col-md-8 mx-auto">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/chauve-souris.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/cheyenne.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/hexalong.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/multi-hexa.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/plume6.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <img src="assets/images/pointe-v.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+        </div>
+    </div>
+</div>
