--- a/src/app/pages/personnalisation/lab-step-menu/lab-step-menu.component.html
+++ b/src/app/pages/personnalisation/lab-step-menu/lab-step-menu.component.html
@@ -1,1 +1,37 @@
-<h3> Step-wizard menu du lab </h3>  
+<div class="step-wizard-lab text-center">
+    <span class="step active" routerLink="/page/lab/type"> 
+        <div class="nb-step "> 
+            <span class="mb-5"> 1 </span> 
+        </div> 
+        <p class="etape pt-5 m-0"> 1ère étape </p> 
+        <p class="text-uppercase"> type </p> 
+    </span>
+    <span class="ligne-horizontale"> </span>
+    <span class="step" routerLink="/page/lab/apprets"> 
+        <div class="nb-step "> 
+            <span class="mb-5"> 2 </span> 
+        </div>  
+        <p class="etape pt-5 m-0"> 2ème étape </p>
+        <p class="text-uppercase"> apprêts </p> 
+    </span>
+    <span class="ligne-horizontale"> </span>
+    <span class="step" routerLink="/page/lab/pattern">
+        <div class="nb-step "> 
+            <span class="mb-5"> 3 </span> 
+        </div>   
+        <p class="etape pt-5 m-0"> 3ème étape </p> 
+        <p class="text-uppercase"> pattern </p> 
+    </span> 
+    <span class="ligne-horizontale"> </span>
+    <span class="step" routerLink="/page/lab/personnalisation"> 
+        <div class="nb-step "> 
+            <span class="mb-5"> 4 </span> 
+        </div>  
+        <p class="etape pt-5 m-0">4ème étape  </p>
+        <p class="text-uppercase" > création </p> 
+    </span>
+</div> 
+
+<div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
