--- a/src/app/pages/personnalisation/grid/grid.component.css
+++ b/src/app/pages/personnalisation/grid/grid.component.css
@@ -4,9 +4,9 @@
 
 .perle {
   border: 1px solid #647677;
-  border-radius: 5px;
-  width: 30px;
-  height: 30px;
+  border-radius: 3px;
+  width: 20px;
+  height: 20px;
 }
 
 .color {
@@ -16,28 +16,8 @@
   margin: 2px;
 }
 
-
-/*body {
-  display: flex;
+.bloc-personnalisation {
+  margin: 50px;
 }
 
 
-
-.cell {
-  width: 10px;
-  height: 10px;
-  border: 1px solid Black;
-  cursor: pointer;
-}
-
-#color-picker,
-#size-box {
-  display: flex;
-  flex-direction: column;
-}
-
-.color {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}*/
