--- a/src/app/pages/personnalisation/lab-pattern/lab-pattern.component.html
+++ b/src/app/pages/personnalisation/lab-pattern/lab-pattern.component.html
@@ -1,24 +1,34 @@
 <app-lab-step-menu></app-lab-step-menu>
 
-<div class="bloc-pattern col-12 col-md-8 mx-auto">
-    <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/chauve-souris.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/cheyenne.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/hexalong.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/multi-hexa.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/plume6.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <img src="assets/images/pointe-v.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+<form [formGroup]='patternBijouForm'>
+    <div class="form-group bloc-pattern col-12 col-md-8 mx-auto">
+        <div class="row">
+            <div class="bloc-one-pattern col-12 col-md-5 m-2">
+                <label><input class="mr-2" type="radio" name="pattern" value="CS" formControlName="pattern" (click)="valeurPattern($event)">Ref: CS2018</label> <br/>
+                <img src="assets/images/chauve-souris-1.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+
+            </div>
+            <div class="bloc-one-pattern col-12 col-md-5 m-2">
+                <label><input class="mr-2" type="radio" name="pattern" value="HXL" formControlName="pattern" (click)="valeurPattern($event)">Ref: HXL2018 </label> <br/>
+                <img src="assets/images/hexalong-1.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+            </div>
+            <div class="bloc-one-pattern col-12 col-md-5 m-2">
+                <label><input class="mr-2" type="radio" name="pattern" value="MHX" formControlName="pattern" (click)="valeurPattern($event)">Ref: MHX2018 </label> <br/>
+                <img src="assets/images/multi-hexa-1.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+            </div>
+            <div class="bloc-one-pattern col-12 col-md-5 m-2">
+                <label><input class="mr-2" type="radio" name="pattern" value="PLM" formControlName="pattern" (click)="valeurPattern($event)">Ref: PLM2018 </label> <br/>
+                <img src="assets/images/plume6-1.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+            </div>
+            <div class="bloc-one-pattern col-12 col-md-5 m-2">
+                <label><input class="mr-2" type="radio" name="pattern" value="PV" formControlName="pattern" (click)="valeurPattern($event)">Ref: PV2018 </label> <br/>
+                <img src="assets/images/pointe-v-1.jpg" alt="pattern en forme de chauve-souris" class="img-fluid"/>
+            </div>
         </div>
     </div>
-</div>
+
+    <div class="btn-valid-type text-center mb-3">
+        <button [disabled]="!patternBijouForm.valid" routerLink="/page/lab/personnalisation" class="btn col-12 col-sm-8 btn-valid-personnalisation"> Continuer </button>
+    </div>
+
+</form> 
