--- a/src/app/pages/personnalisation/lab-step-menu/lab-step-menu.component.html
+++ b/src/app/pages/personnalisation/lab-step-menu/lab-step-menu.component.html
@@ -1,30 +1,30 @@
 <div class="step-wizard-lab text-center">
-    <span class="step active" routerLink="/page/lab/type"> 
-        <div class="nb-step "> 
+    <span class="step active"> 
+        <div class="nb-step" routerLink="/page/lab/type"> 
             <span class="mb-5"> 1 </span> 
         </div> 
         <p class="etape pt-5 m-0"> 1ère étape </p> 
         <p class="text-uppercase"> type </p> 
     </span>
     <span class="ligne-horizontale"> </span>
-    <span class="step" routerLink="/page/lab/apprets"> 
-        <div class="nb-step "> 
+    <span class="step"> 
+        <div class="nb-step" routerLink="/page/lab/apprets"> 
             <span class="mb-5"> 2 </span> 
         </div>  
         <p class="etape pt-5 m-0"> 2ème étape </p>
         <p class="text-uppercase"> apprêts </p> 
     </span>
     <span class="ligne-horizontale"> </span>
-    <span class="step" routerLink="/page/lab/pattern">
-        <div class="nb-step "> 
+    <span class="step">
+        <div class="nb-step" routerLink="/page/lab/pattern"> 
             <span class="mb-5"> 3 </span> 
         </div>   
         <p class="etape pt-5 m-0"> 3ème étape </p> 
         <p class="text-uppercase"> pattern </p> 
     </span> 
     <span class="ligne-horizontale"> </span>
-    <span class="step" routerLink="/page/lab/personnalisation"> 
-        <div class="nb-step "> 
+    <span class="step"> 
+        <div class="nb-step" routerLink="/page/lab/personnalisation"> 
             <span class="mb-5"> 4 </span> 
         </div>  
         <p class="etape pt-5 m-0">4ème étape  </p>
