--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -22,7 +22,7 @@
             <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="/page/instagram"><i class="fa fa-instagram pr-2" aria-hidden="true"></i> Instagram</a>
         </li>
         <li class="nav-item"> <!-- MON COMPTE -->
-            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> Mon compte</a>
+            <a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="/page/login"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> Connexion </a>
         </li>
         <!--li class="nav-item"--> <!-- WISHLIST -->
             <!--a class="nav-link menu-portable text-uppercase pl-3 m-1" routerLink="#"><i class="fa fa-heart-o pr-2" aria-hidden="true"></i>Ma wishlist</a>
@@ -55,7 +55,7 @@
         
         <ul class="col-6 hidden-md-down nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active nav-infos-user text-uppercase" href="#"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> mon compte</a>
+                <a class="nav-link active nav-infos-user text-uppercase" href="#" routerLink="/page/login"> <i class="fa fa-user-o pr-2" aria-hidden="true"></i> connexion </a>
             </li>
             <!--li class="nav-item">
                 <a class="nav-link nav-infos-user text-uppercase" href="#"> <i class="fa fa-heart-o pr-2" aria-hidden="true"></i>ma wishlist</a>
